# PyHammer

./: .gitignore  demo.ipynb  main.py  package-lock.json  pyproject.toml  readme.md  requirements.txt
.github/workflows/: continous_integration.yml
backend/: damage_calculator.py  main.py  requirements.txt  unit_data.py
backend/data/: __init__.py  loading.py
backend/data/factions/: lumineth_realm_lords.json  slaves_to_darkness.json  slaves_to_darkness_heroes.json
backend/metrics/: unit_metric.py  utils.py
backend/models/: abilities.py  damage.py  profile.py
backend/routers/: fight.py  select_unit.py  unit_info.py
backend/rules/: simulation.py  unit_profiles.py
backend/tests/models/: test_weapon.py
data/: loading.py
data/factions/: debug.json  lumineth_realm_lords.json  slaves_to_darkness.json
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/: button.tsx  card.tsx  dropdown.tsx  footer.tsx  nav_bar.tsx  unit_selector.tsx  unit_stats_card.tsx
frontend/src/pages/: calculator.tsx  home.tsx  units.tsx
frontend/src/styles/: calculator.css  calculator_page.css  card.css  dropdown.css  footer.css  global.css  home_page.css  layout.css  nav_bar.css  roboto.css  unit_selector.css  unit_stats_card.css  units_page.css
metrics/: pairwise_metric.py  unit_metric.py  utils.py
models/: damage.py  profile.py  weapon.py
rules/: combat_rules.py  fight.py  simulation.py  unit_profiles.py  utils.py
tests/models/: test_damage.py  test_weapon.py
utils/: utils.py
